# BrainTumor-Brisc2025

./: .gitignore  README.md  organize_brisc_data.py  pyproject.toml
frontend/prototype/: README.md  dashboard.js  index.html
frontend/simple/: README.md  app.js  index.html
scripts/: rank_models.ps1
src/braintumermodels/: __init__.py  __main__.py
src/ml_service/: __init__.py
src/ml_service/api/: __init__.py  main.py
src/ml_service/api/routes/: __init__.py  evaluate.py  explain.py  models.py  predict.py  train.py
src/ml_service/core/: __init__.py  config.py  constants.py  runtime.py
src/ml_service/evaluation/: __init__.py  evaluator.py  metrics.py  report_generator.py  reporting.py
src/ml_service/experiments/: __init__.py  runner.py
src/ml_service/experiments/configs/: __init__.py
src/ml_service/explainability/: __init__.py  engine.py
src/ml_service/inference/: __init__.py  calibration.py  predictor.py
src/ml_service/training/: __init__.py  callbacks.py  engine.py  hyperparameters.py  trainer.py
src/ml_service/utils/: __init__.py  checkpoint.py  logger.py
