[project]
name = "braintumermodels"
version = "0.1.0"
description = "Brain tumor segmentation and classification system"
readme = "README.md"

authors = [
{ name = "Mariam-Srour2003", email = "[mariammsrourr2020@gmail.com](mailto:mariammsrourr2020@gmail.com)@gmail.com" }
]

requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "pillow>=11.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.30.0",
    "timm>=1.0.0",
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "torchaudio==2.6.0+cu124",
]

[project.optional-dependencies]
explainability = [
    "lime>=0.2.0.1",
    "shap>=0.46.0",
]

[project.scripts]
braintumermodels = "braintumermodels:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

# =========================

# UV CONFIG (IMPORTANT FIX)

# =========================

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
